objects/Account.object
<CustomObject>
    <fields>
        <fullName>ADM_Refresh_Value__c</fullName>
        <description>Administration field Used for refresh</description>
        <label>ADM Refresh Value</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_ID_18__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <label>Account ID 18</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Mark__c</fullName>
        <description>C-00004444 https://pruftechnik.my.salesforce.com/500D000000IemUk 
Add A, B, C, D mark for Accounts in Germany.</description>
        <label>Account Mark</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A customer</fullName>
                </value>
                <value>
                    <fullName>B customer</fullName>
                </value>
                <value>
                    <fullName>C customer</fullName>
                </value>
                <value>
                    <fullName>D customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Accounts_name_2nd__c</fullName>
        <description>Used to control the line break in mass merge documents. C-00003666</description>
        <inlineHelpText>Second line of Account name.</inlineHelpText>
        <label>Accounts name 2nd</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CNPJ__c</fullName>
        <defaultValue>&quot;00.000.000/0000-00&quot;</defaultValue>
        <description>Insira o CNPJ da Empresa a ser cadastrada.</description>
        <label>CNPJ</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_form_Lead__c</fullName>
        <inlineHelpText>ID of a Lead that was converted to this account.</inlineHelpText>
        <label>Created form Lead</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_first_Paralign_won_deal__c</fullName>
        <label>Date of first Paralign won deal</label>
        <summarizedField>Opportunity.CloseDate</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.IsWon</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.Product_Type__c</field>
            <operation>equals</operation>
            <value>ALI - Service PARALIGN (S), ALI - Service PARALIGN Editor Reader (S)</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FD_Email__c</fullName>
        <inlineHelpText>Finance Department Contact Email.</inlineHelpText>
        <label>FD Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FD_Extension_Number__c</fullName>
        <inlineHelpText>Finance Department Contact Extension Number</inlineHelpText>
        <label>FD Extension Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>FD_Name__c</fullName>
        <inlineHelpText>Finance Department Contact Name.</inlineHelpText>
        <label>FD Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FD_Number__c</fullName>
        <inlineHelpText>Finance Department Contact Number.</inlineHelpText>
        <label>FD Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Industry_subcategory__c</fullName>
        <label>Industry subcategory</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Industry</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Agricultural machinery</fullName>
                </value>
                <value>
                    <fullName>Aircraft, aircraft parts</fullName>
                </value>
                <value>
                    <fullName>Air Force</fullName>
                </value>
                <value>
                    <fullName>Army</fullName>
                </value>
                <value>
                    <fullName>Banking</fullName>
                </value>
                <value>
                    <fullName>Biogas</fullName>
                </value>
                <value>
                    <fullName>Blowers, fans</fullName>
                </value>
                <value>
                    <fullName>Bottling plants</fullName>
                </value>
                <value>
                    <fullName>Breweries</fullName>
                </value>
                <value>
                    <fullName>Cardboard</fullName>
                </value>
                <value>
                    <fullName>Certification Bodies</fullName>
                </value>
                <value>
                    <fullName>Chemicals</fullName>
                </value>
                <value>
                    <fullName>Coal</fullName>
                </value>
                <value>
                    <fullName>Colleges</fullName>
                </value>
                <value>
                    <fullName>Compressors</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>Contractor</fullName>
                </value>
                <value>
                    <fullName>Conveyors</fullName>
                </value>
                <value>
                    <fullName>Corrugated</fullName>
                </value>
                <value>
                    <fullName>Couplings</fullName>
                </value>
                <value>
                    <fullName>Cranes</fullName>
                </value>
                <value>
                    <fullName>Desalination plant</fullName>
                </value>
                <value>
                    <fullName>Diesel engines</fullName>
                </value>
                <value>
                    <fullName>Electronics</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Environmental</fullName>
                </value>
                <value>
                    <fullName>Exploration - Offshore</fullName>
                </value>
                <value>
                    <fullName>Exploration - Onshore</fullName>
                </value>
                <value>
                    <fullName>Extruders</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Key_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to set FRS Key Account.</description>
        <inlineHelpText>FRS Key Account</inlineHelpText>
        <label>Key Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NA_RIS_GDP_State__c</fullName>
        <label>RIS GDP State</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Lost_Paralign_Opps__c</fullName>
        <label>Number of Lost Paralign Opps</label>
        <summaryFilterItems>
            <field>Opportunity.IsWon</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.Product_Type__c</field>
            <operation>equals</operation>
            <value>ALI - Service PARALIGN, ALI - Service PARALIGN Editor Reader</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Won_Paralign_Opps__c</fullName>
        <label>Number of Won Paralign Opps</label>
        <summaryFilterItems>
            <field>Opportunity.IsWon</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.Product_Type__c</field>
            <operation>equals</operation>
            <value>ALI - Service PARALIGN, ALI - Service PARALIGN Editor Reader</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OEM__c</fullName>
        <defaultValue>false</defaultValue>
        <description>OEM means machine manufaturer for this industry and service company is a service provider for this specific industry. E.g. Wind indurstry: man. of windmill = OEM; service provider for windmills =&gt; Service company.</description>
        <inlineHelpText>Producer of machines for this industry.</inlineHelpText>
        <label>OEM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Industry</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Bar</fullName>
                </value>
                <value>
                    <fullName>Tube</fullName>
                </value>
                <value>
                    <fullName>Wire</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SG_Partner_Name__c</fullName>
        <formula>IF( Parent.Name   =  &apos;&apos;,  Name , Parent.Name)</formula>
        <label>SG Partner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Company__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Service company is a service provider for this specific industry. E.g. Wind indurstry: man. of windmill = OEM; service provider for windmills =&gt; Service company</description>
        <inlineHelpText>Service company for this industry.</inlineHelpText>
        <label>Service Company</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TEMP_Mass_Update__c</fullName>
        <label>TEMP_Mass-Update</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueAccounts__c</fullName>
        <description>Used for Power of One calculation</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unique Accounts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isUniversalID__c</fullName>
        <externalId>true</externalId>
        <label>isUniversalID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Account_transfer_tracking__c</fullName>
        <description>Field use for specify YES value when business unit is not equal to accounts owner business unit.  Outputs are YES:NO.</description>
        <formula>IF( 
TEXT(CreatedBy.sf42_Business_Unit__c) = sf42_Business_Unit__c, &quot;NO&quot;, &quot;YES&quot; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account transfer tracking</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Account_url_link__c</fullName>
        <formula>&quot;https://pruftechnik.my.salesforce.com/&quot; + Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account url link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Agent_Trading_company__c</fullName>
        <label>Agent / Trading company</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Date_of_first_won_deal__c</fullName>
        <label>Date of first won deal</label>
        <summarizedField>Opportunity.CloseDate</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.IsWon</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ptt_Date_of_last_Paralign_lost_deal__c</fullName>
        <label>Date of last Paralign lost deal</label>
        <summarizedField>Opportunity.CloseDate</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.Product_Type__c</field>
            <operation>equals</operation>
            <value>ALI - Service PARALIGN (S), ALI - Service PARALIGN Editor Reader (S)</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.IsWon</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ptt_Date_of_last_Paralign_won_deal__c</fullName>
        <label>Date of last Paralign won deal</label>
        <summarizedField>Opportunity.CloseDate</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.IsWon</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.Product_Type__c</field>
            <operation>equals</operation>
            <value>ALI - Service PARALIGN (S), ALI - Service PARALIGN Editor Reader (S)</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ptt_Date_of_last_won_deal__c</fullName>
        <label>Date of last won deal</label>
        <summarizedField>Opportunity.CloseDate</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.IsWon</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ptt_IsActive_Account_Owner__c</fullName>
        <formula>Owner.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsActive Account Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ptt_Number_of_Opportunities__c</fullName>
        <label>Number of All Opportunities</label>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ptt_Number_of_Won_Opportunities__c</fullName>
        <label>Number of Won Opportunities</label>
        <summaryFilterItems>
            <field>Opportunity.IsWon</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ptt_Paralign_Lost_Amount__c</fullName>
        <label>Paralign Lost Amount</label>
        <summarizedField>Opportunity.ptt_Amount_Lost__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.Product_Type__c</field>
            <operation>equals</operation>
            <value>ALI - Service PARALIGN, ALI - Service PARALIGN Editor Reader</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ptt_Paralign_Revenue__c</fullName>
        <label>Paralign Revenue</label>
        <summarizedField>Opportunity.Amount_Won__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.Product_Type__c</field>
            <operation>equals</operation>
            <value>ALI - Service PARALIGN, ALI - Service PARALIGN Editor Reader</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ptt_Potential_Revenue__c</fullName>
        <inlineHelpText>How much we can sell to this Account?</inlineHelpText>
        <label>Potential Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ptt_Total_Value_of_Won_Opportunities__c</fullName>
        <label>Total Value of Won Opportunities</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.IsWon</field>
            <operation>equals</operation>
            <value>true</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ptt_Win_Percentage__c</fullName>
        <formula>IF(ptt_Number_of_Opportunities__c &gt; 0, ptt_Number_of_Won_Opportunities__c / ptt_Number_of_Opportunities__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Win Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ptt_it_IT_Region__c</fullName>
        <description>Is generated automatically based on &quot;Shipping State/Province&quot; which contains two letters code.</description>
        <formula>IF( ShippingState = &quot;&quot;,null,
IF(CONTAINS(&quot;AQ:CH:PE:TE:&quot;, ShippingState),&quot;Abruzzo&quot;,
IF(CONTAINS(&quot;MT:PZ:&quot;, ShippingState),&quot;Basilicata&quot;,
IF(CONTAINS(&quot;CZ:CS:KR:RC:VV:&quot;, ShippingState),&quot;Calabria&quot;,
IF(CONTAINS(&quot;AV:BN:CE:NA:SA:&quot;, ShippingState),&quot;Campania&quot;,
IF(CONTAINS(&quot;BO:FE:FC:MO:PR:PC:RA:RE:RN:&quot;, ShippingState),&quot;Emilia-Romagna&quot;,
IF(CONTAINS(&quot;GO:PN:TS:UD:&quot;, ShippingState),&quot;Friuli-Venezia Giulia&quot;,
IF(CONTAINS(&quot;FR:LT:RI:RM:VT:&quot;, ShippingState),&quot;Lazio&quot;,
IF(CONTAINS(&quot;GE:IM:SP:SV:&quot;, ShippingState),&quot;Liguria&quot;,
IF(CONTAINS(&quot;BG:BS:CO:CR:LC:LO:MN:MI:MB:PV:SO:VA:&quot;, ShippingState),&quot;Lombardia&quot;,
IF(CONTAINS(&quot;AN:AP:FM:MC:PU:&quot;, ShippingState),&quot;Marche&quot;,
IF(CONTAINS(&quot;CB:IS:&quot;, ShippingState),&quot;Molise&quot;,
IF(CONTAINS(&quot;AL:AT:BI:CN:NO:TO:VB:VC:&quot;, ShippingState),&quot;Piemonte&quot;,
IF(CONTAINS(&quot;BA:BT:BR:FG:LE:TA:&quot;, ShippingState),&quot;Puglia&quot;,
IF(CONTAINS(&quot;CA:CI:VS:NU:OG:OT:OR:SS:&quot;, ShippingState),&quot;Sardegna&quot;,
IF(CONTAINS(&quot;AG:CL:CT:EN:ME:PA:RG:SR:TP:&quot;, ShippingState),&quot;Sicilia&quot;,
IF(CONTAINS(&quot;AR:FI:GR:LI:LU:MS:PI:PT:PO:SI:&quot;, ShippingState),&quot;Toscana&quot;,
IF(CONTAINS(&quot;BZ:TN:&quot;, ShippingState),&quot;Trentino-Alto Adige&quot;,
IF(CONTAINS(&quot;PG:TR:&quot;, ShippingState),&quot;Umbria&quot;,
IF(CONTAINS(&quot;AO:&quot;, ShippingState),&quot;Valle d&apos;Aosta&quot;,
IF(CONTAINS(&quot;BL:PD:RO:TV:VE:VR:VI:&quot;, ShippingState),&quot;Veneto&quot;, null
)))))))))))))))))))))</formula>
        <inlineHelpText>Is generated automatically based on &quot;Shipping State/Province&quot; which contains two letters code.</inlineHelpText>
        <label>IT Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_tax_number__c</fullName>
        <description>Fiscal ID - Tax number</description>
        <inlineHelpText>Number which account use for tax/fiscal purposes.</inlineHelpText>
        <label>Tax number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_Accountmanager_ALI__c</fullName>
        <label>Accountmanager ALI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_Accountmanager_CM__c</fullName>
        <label>Accountmanager CM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_Accountmanager_NDT__c</fullName>
        <label>Accountmanager NDT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_Business_Unit__c</fullName>
        <label>Business Unit</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_Country_ISO_Code__c</fullName>
        <label>Country ISO Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country</label>
        <referenceTo>pw_cc__CountryObject__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sf42_Information_1_3__c</fullName>
        <label>Information 1-3</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sf42_Manual_distribution_list__c</fullName>
        <label>Manual distribution list</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sf42_Material__c</fullName>
        <label>Material</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Industry</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Aluminium</fullName>
                </value>
                <value>
                    <fullName>Brass</fullName>
                </value>
                <value>
                    <fullName>Carbon steel</fullName>
                </value>
                <value>
                    <fullName>Copper</fullName>
                </value>
                <value>
                    <fullName>Precious metals</fullName>
                </value>
                <value>
                    <fullName>Stainless steel</fullName>
                </value>
                <value>
                    <fullName>Titanium</fullName>
                </value>
                <value>
                    <fullName>Tungsten</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sf42_Notes_Migration_ID__c</fullName>
        <externalId>true</externalId>
        <label>Notes Migration ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_Old_ID__c</fullName>
        <label>Old ID</label>
        <length>64</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>sf42_Production_Mode__c</fullName>
        <label>Production Mode</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Industry</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Black</fullName>
                </value>
                <value>
                    <fullName>Brazed</fullName>
                </value>
                <value>
                    <fullName>Cast</fullName>
                </value>
                <value>
                    <fullName>Cold drawn</fullName>
                </value>
                <value>
                    <fullName>Cold heading</fullName>
                </value>
                <value>
                    <fullName>Extruded</fullName>
                </value>
                <value>
                    <fullName>Flexographic</fullName>
                </value>
                <value>
                    <fullName>Hot rolled</fullName>
                </value>
                <value>
                    <fullName>Offset</fullName>
                </value>
                <value>
                    <fullName>Peeled</fullName>
                </value>
                <value>
                    <fullName>Polished</fullName>
                </value>
                <value>
                    <fullName>Rotogravure</fullName>
                </value>
                <value>
                    <fullName>Seamless</fullName>
                </value>
                <value>
                    <fullName>Welded</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sf42_Region_ALI__c</fullName>
        <label>Region ALI</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_Region_CM__c</fullName>
        <label>Region CM</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_Region_NDT__c</fullName>
        <label>Region NDT</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_ca_Account_Status__c</fullName>
        <label>CA Account Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current Client - Satisfied</fullName>
                </value>
                <value>
                    <fullName>Current Client - At Risk</fullName>
                </value>
                <value>
                    <fullName>Former Client</fullName>
                </value>
                <value>
                    <fullName>Prospecting</fullName>
                </value>
                <value>
                    <fullName>No longer in business</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sf42_ca_Current_Primary_Challenge__c</fullName>
        <label>CA Current Primary Challenge</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Branding</fullName>
                </value>
                <value>
                    <fullName>Increasing Margins</fullName>
                </value>
                <value>
                    <fullName>Managing Growth</fullName>
                </value>
                <value>
                    <fullName>Merger and Acquisition</fullName>
                </value>
                <value>
                    <fullName>Organizational Issues</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Sales Decline</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sf42_ca_Date_Demo__c</fullName>
        <label>CA Date Demo</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sf42_ca_Demonstrators__c</fullName>
        <label>CA Demonstrators</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Martin Pham</fullName>
                </value>
                <value>
                    <fullName>Florian Buder</fullName>
                </value>
                <value>
                    <fullName>Bernard Nowak</fullName>
                </value>
                <value>
                    <fullName>Ovidiu Cioban</fullName>
                </value>
                <value>
                    <fullName>Claude Martineau</fullName>
                </value>
                <value>
                    <fullName>Mark Dennler</fullName>
                </value>
                <value>
                    <fullName>Grant Dennler</fullName>
                </value>
                <value>
                    <fullName>Dave Green</fullName>
                </value>
                <value>
                    <fullName>Ivan Zubot</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sf42_ca_Est_Annual_Consulting_Budget__c</fullName>
        <label>CA Estimated Annual Consulting Budget</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>sf42_ca_Products_del__c</fullName>
        <label>CA Products</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aligneo</fullName>
                </value>
                <value>
                    <fullName>Optalign</fullName>
                </value>
                <value>
                    <fullName>Rotalign</fullName>
                </value>
                <value>
                    <fullName>Vibxpert</fullName>
                </value>
                <value>
                    <fullName>Vibscanner</fullName>
                </value>
                <value>
                    <fullName>Wearscanner</fullName>
                </value>
                <value>
                    <fullName>Vibrotip</fullName>
                </value>
                <value>
                    <fullName>Vibnode</fullName>
                </value>
                <value>
                    <fullName>Vibroweb</fullName>
                </value>
                <value>
                    <fullName>Vibroweb XP</fullName>
                </value>
                <value>
                    <fullName>Vibronet Signalmaster</fullName>
                </value>
                <value>
                    <fullName>Inclineo</fullName>
                </value>
                <value>
                    <fullName>SmartAlign</fullName>
                </value>
                <value>
                    <fullName>Smartscanner</fullName>
                </value>
                <value>
                    <fullName>Pullalign</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sf42_ca_Services_Serv__c</fullName>
        <label>CA Services: Serv# (E1,E2 : Date)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sf42_ca_Services_del__c</fullName>
        <label>CA Services</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Condition Monitoring</fullName>
                </value>
                <value>
                    <fullName>Paralign</fullName>
                </value>
                <value>
                    <fullName>Shaft Alignment</fullName>
                </value>
                <value>
                    <fullName>Centralign</fullName>
                </value>
                <value>
                    <fullName>Yardalign</fullName>
                </value>
                <value>
                    <fullName>Data Collection</fullName>
                </value>
                <value>
                    <fullName>Balancing</fullName>
                </value>
                <value>
                    <fullName>Troubleshooting</fullName>
                </value>
                <value>
                    <fullName>Temporary Telediagnosis</fullName>
                </value>
                <value>
                    <fullName>Permalign</fullName>
                </value>
                <value>
                    <fullName>Hydralign</fullName>
                </value>
                <value>
                    <fullName>Torque Measurement</fullName>
                </value>
                <value>
                    <fullName>Vibration Measurement</fullName>
                </value>
                <value>
                    <fullName>Acceptance Test</fullName>
                </value>
                <value>
                    <fullName>Machinery Service</fullName>
                </value>
                <value>
                    <fullName>Online Condition Monitoring</fullName>
                </value>
                <value>
                    <fullName>Portable CM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sf42_ca_Survey_Sondage__c</fullName>
        <label>CA Survey Sondage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Survey Sent</fullName>
                </value>
                <value>
                    <fullName>Needed</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sf42_de_City_PO_BOX__c</fullName>
        <label>City (PO Box)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_de_Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>sf42_de_Last_Visit__c</fullName>
        <label>Last Visit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sf42_de_Letter_Salutation__c</fullName>
        <label>Letter Salutation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_de_PO_Box__c</fullName>
        <label>PO Box</label>
        <length>50</length>
        <type>Text</type>
    </fields>
</CustomObject>